--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -1,7 +1,7 @@
 #
-# radium: the most RAD php framework
+# radium: the most RAD PHP Framework
 #
-# @copyright Copyright 2010, Playwell Inc.
+# @copyright Copyright 2011, Playwell Inc.
 # @license   http://opensource.org/licenses/bsd-license.php The BSD License
 #
 
