--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -10,5 +10,5 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !favicon.ico$
-    RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
+    RewriteRule ^(.*)$ index.php?__radiumurl__=$1 [QSA,L]
 </IfModule>
